# airflow-supervisor

./: .buildinfo  .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.html  README.md  genindex.html  index.html  index.html.md  llms-full.txt  llms.txt  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/docs/src/: API.doctree  api.doctree  examples.doctree  explanation.doctree  getting-started.doctree  how-to.doctree  tutorial.doctree
.doctrees/docs/src/_build/: airflow_supervisor.AirflowConfiguration.doctree  airflow_supervisor.ProcessInfo.doctree  airflow_supervisor.ProgramConfiguration.doctree  airflow_supervisor.Supervisor.doctree  airflow_supervisor.SupervisorAirflowConfiguration.doctree  airflow_supervisor.SupervisorConfiguration.doctree  airflow_supervisor.SupervisorConvenienceConfiguration.doctree  airflow_supervisor.SupervisorRemoteXMLRPCClient.doctree  airflow_supervisor.SupervisorSSH.doctree  airflow_supervisor.SupervisorSSHAirflowConfiguration.doctree  airflow_supervisor.SupervisorSSHTask.doctree  airflow_supervisor.SupervisorSSHTaskArgs.doctree  airflow_supervisor.SupervisorTask.doctree  airflow_supervisor.SupervisorTaskArgs.doctree  airflow_supervisor.airflow.doctree  airflow_supervisor.client.doctree  airflow_supervisor.config.doctree  airflow_supervisor.doctree  airflow_supervisor.load_airflow_config.doctree  airflow_supervisor.load_airflow_ssh_config.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  docs.yaml  docs.yml  publish.yml
_downloads/4ee16d3236381c91a180104ac3c7abf2/: test_hydra.py
_modules/: index.html
_modules/airflow_supervisor/airflow/: local.html  ssh.html
_modules/airflow_supervisor/config/: airflow.html  supervisor.html  supervisor_ssh.html  task.html  task_ssh.html
_modules/supervisor_pydantic/client/: xmlrpc.html
_modules/supervisor_pydantic/config/: convenience.html  program.html  supervisor.html
_sources/: README.md.txt  index.md.txt
_sources/.github/ISSUE_TEMPLATE/: bug_report.md.txt
_sources/docs/src/: API.md.txt  examples.md.txt  tutorial.md.txt
_sources/docs/src/_build/: airflow_supervisor.AirflowConfiguration.rst.txt  airflow_supervisor.ProcessInfo.rst.txt  airflow_supervisor.ProgramConfiguration.rst.txt  airflow_supervisor.Supervisor.rst.txt  (+16 more)
_static/styles/: custom.css
airflow_supervisor/: __init__.py  config.py  daggen.py  utils.py
airflow_supervisor/airflow/: __init__.py  commands.py  common.py  local.py  setup.py  ssh.py
airflow_supervisor/airflow/dag/: __init__.py  common.py  local.py  setup.py  ssh.py
airflow_supervisor/airflow/operators/: common.py
airflow_supervisor/airflow/sensors/: common.py
airflow_supervisor/client/: __init__.py  common.py  local.py  xmlrpc.py
airflow_supervisor/config/: __init__.py  airflow.py  base.py  eventlistener.py  fcgiprogram.py  group.py  include.py  inet_http_server.py  program.py  rpcinterface.py  supervisor.py  supervisor_ssh.py  supervisorctl.py  supervisord.py  task.py  task_ssh.py  unix_http_server.py
airflow_supervisor/config/hydra/: base.yaml
airflow_supervisor/config/utils/: relativedelta.py
airflow_supervisor/tests/: conftest.py  gen_test_pydantic.py  helpers.py  test_all.py  test_client.py  test_dag.py  test_local.py  test_nolocal.py  test_ssh.py  test_ssh_extended.py  test_utils.py
airflow_supervisor/tests/airflow/: test_commands.py
airflow_supervisor/tests/client/: test_client_e2e.py  test_client_structs.py
airflow_supervisor/tests/config/: test_airflow.py  test_config.py  test_eventlistener.py  test_fcgiprogram.py  test_group.py  test_include.py  test_inethttpserver.py  test_program.py  test_rpcinterface.py  test_supervisorctl.py  test_supervisord.py  test_task.py  test_task_ssh.py  test_toplevel.py  test_types.py  test_unixhttpserver.py
airflow_supervisor/tests/hydra/: test_hydra.py  test_hydra_overrides.py
docs/src/: API.html  API.md  api.html  api.html.md  api.md  examples.html  explanation.html  explanation.html.md  explanation.md  getting-started.html  getting-started.md  how-to.html  how-to.html.md  tutorial.html
docs/src/_build/: airflow_supervisor.AirflowConfiguration.html  airflow_supervisor.ProcessInfo.html  airflow_supervisor.ProcessInfo.html.md  airflow_supervisor.ProgramConfiguration.html  airflow_supervisor.ProgramConfiguration.html.md  airflow_supervisor.Supervisor.html  airflow_supervisor.Supervisor.html.md  airflow_supervisor.SupervisorAirflowConfiguration.html  airflow_supervisor.SupervisorAirflowConfiguration.html.md  airflow_supervisor.SupervisorConfiguration.html  airflow_supervisor.SupervisorConfiguration.html.md  airflow_supervisor.SupervisorConvenienceConfiguration.html  airflow_supervisor.SupervisorConvenienceConfiguration.html.md  airflow_supervisor.SupervisorRemoteXMLRPCClient.html  airflow_supervisor.SupervisorRemoteXMLRPCClient.html.md  airflow_supervisor.SupervisorSSH.html  airflow_supervisor.SupervisorSSH.html.md  airflow_supervisor.SupervisorSSHAirflowConfiguration.html  airflow_supervisor.SupervisorSSHAirflowConfiguration.html.md  airflow_supervisor.SupervisorSSHTask.html  airflow_supervisor.SupervisorSSHTask.html.md  airflow_supervisor.SupervisorSSHTaskArgs.html  airflow_supervisor.SupervisorSSHTaskArgs.html.md  airflow_supervisor.SupervisorTask.html  airflow_supervisor.SupervisorTask.html.md  airflow_supervisor.SupervisorTaskArgs.html  airflow_supervisor.SupervisorTaskArgs.html.md  airflow_supervisor.airflow.html  airflow_supervisor.client.html  airflow_supervisor.config.html  airflow_supervisor.html  airflow_supervisor.load_airflow_config.html  airflow_supervisor.load_airflow_config.html.md  airflow_supervisor.load_airflow_ssh_config.html  airflow_supervisor.load_airflow_ssh_config.html.md
(+23 files in other folders)
