[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "airflow-supervisor"
authors = [{name = "the airflow-supervisor authors", email = "3105306+timkpaine@users.noreply.github.com"}]
description="Supervisor operators and configuration for long-running tasks"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.1"
requires-python = ">=3.9"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "apache-airflow>=2,<3",
    "colorlog",
    "hydra-core",
    "jinja2",
    "omegaconf",
    "pydantic>=2",
    "rich",
    "typer",
]

[project.urls]
Repository = "https://github.com/airflow-laminar/airflow-supervisor"
Homepage = "https://github.com/airflow-laminar/airflow-supervisor"

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatchling",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
    # Config
    "airflow-config>=0.1.2",
    # NOTE: this is not a runtime dep as supervisord need not be installed locally
    "supervisor",
]
config = [
    "airflow-config>=0.1.2",
]

[project.scripts]
_airflow_supervisor_command = "airflow_supervisor.airflow.commands:main"

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "airflow_supervisor/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "Makefile",
    "setup.py",
    "docs/*/*",
]

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
include = [
    "/airflow_supervisor",
    "LICENSE",
    "README.md",
]
exclude = [
    "/.github",
    "/.gitattributes",
    "/.gitignore",
    "/docs",
]

[tool.hatch.build.targets.wheel]
include = [
    "/airflow_supervisor",
]
exclude = [
    "/.github",
    "/.gitattributes",
    "/.gitignore",
    "/pyproject.toml",
    "/docs",
]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "airflow_supervisor/tests"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["airflow_supervisor"]
section-order = [
    "future",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.yardang]
title = "airflow-supervisor"
root = "README.md"
pages = ["docs/src/API.md"]
use-autoapi = false
