[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "airflow-supervisor"
authors = [{name = "the airflow-supervisor authors", email = "t.paine154@gmail.com"}]
description = "Supervisor operators and configuration for long-running tasks"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "1.0.1"
requires-python = ">=3.9"
keywords = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # NOTE: these are required in the airflow environment
    # "airflow-ha",
    # "apache-airflow>=2,<3",
    "colorlog",
    "hydra-core",
    "jinja2",
    "omegaconf",
    "pydantic>=2",
    "rich",
    "typer",
]

[project.optional-dependencies]
all = [
    "airflow-ha",
    "apache-airflow>=2,<3",
]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatchling",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
    # airflow-config integration
    "airflow-config>=0.1.2",
    # airflow-balancer integration
    "airflow-balancer>=0.3.0",
    # NOTE: this is not a runtime dep as supervisord need not be installed locally
    "airflow-ha>=1.1.0",
    "apache-airflow>=2,<3",
    "supervisor",
]
config = [
    "airflow-config>=0.1.2",
]

[project.scripts]
_airflow_supervisor_command = "airflow_supervisor.airflow.commands:main"

[project.urls]
Repository = "https://github.com/airflow-laminar/airflow-supervisor"
Homepage = "https://github.com/airflow-laminar/airflow-supervisor"

[tool.bumpversion]
current_version = "1.0.1"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "airflow_supervisor/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "Makefile",
    "docs/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "airflow_supervisor/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["airflow_supervisor"]

[tool.hatch.build.targets.wheel]
packages = ["airflow_supervisor"]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "airflow_supervisor/tests"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["airflow_supervisor"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.yardang]
title = "airflow-supervisor"
root = "README.md"
pages = ["docs/src/API.md"]
use-autoapi = false
